devops/kubernetes/monitoring/jhipster-monitoring/1-jhipster-prometheus-cr.yml
apiVersion: v1
kind: Service
metadata:
  name: jhipster-prometheus
  namespace: jhipster-monitoring
spec:
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: jhipster-prometheus
