devops/kubernetes/monitoring/jhipster-monitoring/4-jhipster-grafana.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jhipster-grafana
  namespace: jhipster-monitoring
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jhipster-grafana
    spec:
      containers:
      - name: jhipster-grafana
        image: grafana/grafana:4.3.2
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "250Mi"
            cpu: "200m"
        volumeMounts:
        - name: grafana-storage
          mountPath: /var/grafana-storage
      volumes:
      - name: grafana-storage
        emptyDir: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: jhipster-grafana
  namespace: jhipster-monitoring
  labels:
    app: jhipster-grafana
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  type: ClusterIP
  selector:
    app: jhipster-grafana
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jhipster-grafana
  namespace: jhipster-monitoring
spec:
  rules:
  - host: jhipster-grafana.jhipster-system.192.168.99.100.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: jhipster-grafana
          servicePort: 3000
